<resources>
    <string name="app_name">CardShowcase</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">The game</string>
    <string name="main_fragment_label">Main Meniu</string>
    <string name="next">Next</string>
    <string name="start_game">Start game</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello main fragment. Arg: %1$s</string>
    <string name="game_title">Cards Against Connectivity</string>
    <string name="draw_card_button_text">Draw a card</string>
    <string name="play_card_button_text">Play a card</string>
    <string name="card_on_stack_info">Card on Stack</string>
    <string name="manual_subtitle_1">Choosing\nnew game</string>
    <string name="manual_subtitle_2">Selecting\ncards</string>
    <string name="manual_contents_1">There is a couple options to start a game...</string>
    <string name="instruction_subtitle_1">Gameplay</string>
    <string name="instruction_contents_1">2 or more players (up to 10) are dealt 5 cards each; the deck is then cut and the cut card becomes the first card in the discard pile. Play starts to the dealer\'s right. \n\nThe next card played must be of the same suit or the same value as the card on the top of the discard pile. If a 7 of spades was on the top of the discard pile, the player can play a 9 of spades or a 7 of clubs. Alternatively, an Ace or Joker can be played. If the player cannot play a card, they must draw from the deck.\n\nCards can be played in runs, i.e. 5 of Spades, 6 of Spades, 7 of Spades, 7 of Hearts, 8 of Hearts, 8 of Clubs, 7 of Clubs.\n\nWhen an action card is played, the player next in sequence must complete the action or add to it to pass it onto the next player in sequence. When down to a single card, a player must say "Macau!". If an opponent calls Macau before the player, the player must draw a card. The winner of the game is the first player to have no cards; in instances of more than 2 players, gameplay continues until only one player is left with cards.</string>
    <string name="action_manual">App Manual</string>
    <string name="instruction_subtitle_2">Action Cards</string>
    <string name="action_instructions">Game Instruction</string>
    <string name="penalty_text">-</string>
    <string name="play_local_multiplayer">Local multiplayer</string>

    <string name="demand_figure_message">What figure do you want to choose?</string>
    <string name="demand_figure_cancel">Play Jack as a regular card</string>
    <string name="demand_figure_ok">Demand choice</string>

    <string name="demand_house_message">What house do you want to demand?</string>
    <string name="demand_house_cancel">Play Ace as a regular card</string>
    <string name="demand_house_ok">Demand choice</string>

    <string name="heart_emoji">♥</string>
    <string name="spades_emoji">♠</string>
    <string name="diamond_emoji">♦</string>
    <string name="clubs_emoji">♣</string>

</resources>