<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="App Manual"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/manual_horizontal_title_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="textView"
                tools:layout_editor_absoluteY="35dp" />

            <TextView
                android:id="@+id/manual_subtitle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual_subtitle_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/manual_horizontal_title_barrier"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/manual_vertical_barrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="manual_subtitle_1, manual_subtitle_2" />

            <TextView
                android:id="@+id/manual_contents_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/manual_contents_1"
                android:justificationMode="inter_word"
                app:layout_constraintTop_toTopOf="@id/manual_horizontal_title_barrier"
                app:layout_constraintStart_toEndOf="@id/manual_vertical_barrier"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                />

            <!-- ACTION CARDS -->

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/manual_subtitle_1_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="manual_contents_1"/>

            <TextView
                android:id="@+id/manual_subtitle_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manual_subtitle_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/manual_subtitle_1_barrier"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/manual_contents_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/manual_contents_1"
                android:justificationMode="inter_word"
                app:layout_constraintTop_toBottomOf="@+id/manual_subtitle_1_barrier"
                app:layout_constraintStart_toEndOf="@id/manual_vertical_barrier"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>